--- a/ProyectoSernac/ProyectoSernacApp/Templates/ProyectoSernacApp/Inicio.html
+++ b/ProyectoSernac/ProyectoSernacApp/Templates/ProyectoSernacApp/Inicio.html
@@ -133,7 +133,7 @@
   </footer>
   <!-- Bootstrap -->
   <script src="{% static 'ProyectoSernacApp/vendor/jquery/jquery.min.js' %}"></script>
-  <script src="{% static 'ProyectoSernacApp/vendor/bootstrap/js/bootstrap.bundle.min.js' %"></script>
+  <script src="{% static 'ProyectoSernacApp/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 
   
 </body>
