--- a/ProyectoSernac/ProyectoSernacApp/Templates/ProyectoSernacApp/Registro.html
+++ b/ProyectoSernac/ProyectoSernacApp/Templates/ProyectoSernacApp/Registro.html
@@ -9,6 +9,11 @@
 
     <img class="mb-4" src="{% static 'ProyectoSernacApp/img/logo.png' %}" alt="" width="300" height="123">
     <h1 class="h3 mb-3 fw-normal">Ingrese datos</h1>
+
+    <p><label for="id_first_name"></label> <input type="text" name="first_name" maxlength="150" autofocus required
+            id="id_first_name" class="form-control" id="floatingInput" placeholder="Nombre"></p>
+    <p><label for="id_last_name"></label> <input type="text" name="last_name" maxlength="150" autofocus required
+            id="id_last_name" class="form-control" id="floatingInput" placeholder="Apellido"></p>
     <p><label for="id_username"></label> <input type="text" name="username" maxlength="150" autofocus required
             id="id_username" class="form-control" id="floatingInput" placeholder="Usuario"></p>
     <p><label for="id_email"></label> <input type="email" name="email" required id="id_email" class="form-control"
@@ -19,7 +24,7 @@
             class="form-control" id="floatingInput" placeholder="Confirme Contraseña"></p>
             
     <button class="w-100 btn btn-lg btn-primary" type="submit" id="submit">Registrarse</button>
-    <a class="nav-link text-small text-center" type="submit" href="{% url 'login' %}"><u><i>Iniciar sesion</u></i></a>
+    <a class="nav-link text-small text-center" type="submit" href="{% url 'Inicio' %}"><u><i>Iniciar sesion</u></i></a>
     
 
 
