--- a/ProyectoSernac/ProyectoSernacApp/Templates/ProyectoSernacApp/Registro.html
+++ b/ProyectoSernac/ProyectoSernacApp/Templates/ProyectoSernacApp/Registro.html
@@ -24,7 +24,7 @@
             class="form-control" id="floatingInput" placeholder="Confirme Contraseña"></p>
             
     <button class="w-100 btn btn-lg btn-primary" type="submit" id="submit">Registrarse</button>
-    <a class="nav-link text-small text-center" type="submit" href="{% url 'Inicio' %}"><u><i>Iniciar sesion</u></i></a>
+    <a class="nav-link text-small text-center" type="submit" href="{% url 'login' %}"><u><i>Iniciar sesion</u></i></a>
     
 
 
