--- a/ProyectoSernac/ProyectoSernacApp/Templates/accounts/change_password.html
+++ b/ProyectoSernac/ProyectoSernacApp/Templates/accounts/change_password.html
@@ -1,5 +1,15 @@
-<form method="post">
-  {% csrf_token %}
+{% extends "ProyectoSernacApp/Login.html" %}
+{% load static %}
+{% block content %}
+<link href="{% static 'ProyectoSernacApp/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+<link href="{% static 'ProyectoSernacApp/css/signin.css' %}" rel="stylesheet">
+<form class="form-signin" method="post">
+    {% csrf_token %}
+  <img class="mb-4" src="{% static 'ProyectoSernacApp/img/logo.png' %}" alt="" width="300" height="123">
+
   {{ form }}
-  <button type="submit">Save changes</button>
+
+  <button type="submit">Guardar cambios</button>
+  {% endblock %}
+{% include "ProyectoSernacApp/Footer.html" %}
 </form>
