--- a/ProyectoSernac/ProyectoSernacApp/Templates/ProyectoSernacApp/Registro.html
+++ b/ProyectoSernac/ProyectoSernacApp/Templates/ProyectoSernacApp/Registro.html
@@ -7,7 +7,7 @@
 <form class="form-signin" method="post">
     {% csrf_token %}
 
-    <img class="mb-4" src="{% static 'ProyectoSernacApp/img/logo.png' %}" alt="" width="300" height="123">
+    <img class="mb-4" src="{% static 'ProyectoSernacApp/img/silueta.png' %}" width="594" height="100">
     <h1 class="h3 mb-3 fw-normal">Ingrese datos</h1>
 
     <p><label for="id_first_name"></label> <input type="text" name="first_name" maxlength="150" autofocus required
