--- a/ProyectoSernac/ProyectoSernacApp/Templates/ProyectoSernacApp/Login.html
+++ b/ProyectoSernac/ProyectoSernacApp/Templates/ProyectoSernacApp/Login.html
@@ -7,8 +7,8 @@
 <form class="form-signin" method="post">
   {% csrf_token %}
 
-  <img class="mb-4" src="{% static 'ProyectoSernacApp/img/logo.png' %}" alt="" width="300" height="123">
-  <h1 class="h3 mb-3 fw-normal">Ingrese datos</h1>
+  <img src="{% static 'ProyectoSernacApp/img/logo.png' %}" alt="" width="594" height="315">
+  <h1 class="h3 mb-3 fa-twitter">Ingrese datos</h1>
 
 
   
