--- a/ProyectoSernac/ProyectoSernacApp/Templates/ProyectoSernacApp/Inicio.html
+++ b/ProyectoSernac/ProyectoSernacApp/Templates/ProyectoSernacApp/Inicio.html
@@ -49,7 +49,7 @@
               <a class="dropdown-item"  href="{% url 'password_change' %}">
                 Cambio de contraseña
               </a>
-              <a class="dropdown-item" href="{% url 'password_change' %}">
+              <a class="dropdown-item" href="{% url 'Perfil' %}">
                 Editar Perfil
               </a>
             </div>
