--- a/ProyectoSernacApp/templates/play/tablero.html
+++ b/ProyectoSernacApp/templates/play/tablero.html
@@ -28,8 +28,14 @@
 
                  {% endfor %}
 
+
+
+
            </tbody>
        </table>
+
+      <a class="nav-link active mx-auto" href="{% url 'Educacion' %}">
+          <img src="{% static 'ProyectoSernacApp/img/salida.png' %}" width="35" height="35">Volver al Inicio</a>
 
 </div>
 
