--- a/ProyectoSernacApp/templates/ProyectoSernacApp/Consulta.html
+++ b/ProyectoSernacApp/templates/ProyectoSernacApp/Consulta.html
@@ -12,7 +12,7 @@
         <h1 class="h3 mb-3 fw-normal">Envie su consulta</h1>
 
         <p><label for="id_first_name"></label> <input type="text" name="nombre" maxlength="150" autofocus required
-            id="id_first_name" class="form-control" id="floatingInput" placeholder="Nombre"></p>
+            id="id_first_name" class="form-control" id="floatingInput" placeholder="Ingresa tu nombre de usuario"></p>
         <p><label for="id_last_name"></label> <textarea type="text" name="mensaje" maxlength="150" autofocus required
             id="id_last_name" class="form-control" id="floatingInput" placeholder="Escriba aqui su consulta"></textarea> </p>
      
