--- a/ProyectoSernacApp/templates/ProyectoSernacApp/Educacion.html
+++ b/ProyectoSernacApp/templates/ProyectoSernacApp/Educacion.html
@@ -171,16 +171,16 @@
       <div class="col-lg-4">
         <img class="mb-4" src="{% static 'ProyectoSernacApp/img/migrantes.png' %}" width="140" height="140">
 
-        <h2>Migrantes</h2>
-        <p>La inclusión de estos nuevos ciudadanos y ciudadanas consumidores es parte de los nuevos desafíos que tiene nuestro país.</p>
-        <p><a class="btn btn-secondary" href="#2">View details &raquo;</a></p>
+        <h2>Foro</h2>
+        <p>Aqui podras interactuar con otros usuarios, expresar tus opiniones con libertad pero siempre con respeto hacia los demas.</p>
+        <p><a class="btn btn-secondary" href="{% url 'post' %}">Mostrar detalles &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img class="mb-4" src="{% static 'ProyectoSernacApp/img/contrato.png' %}" width="140" height="140">
 
         <h2>Archivos coplementarios</h2>
-        <p>Aqui podras descargar los archivos necesarios para ampliar tus conociminetos</p>
-        <p><a class="btn btn-secondary" href="{% url 'descarga' %}">View details &raquo;</a></p>
+        <p>Aqui podras descargar los archivos necesarios para ampliar tus conociminetos.</p>
+        <p><a class="btn btn-secondary" href="{% url 'descarga' %}">Mostrar detalles &raquo;</a></p>
         
 
       </div><!-- /.col-lg-4 -->
