--- a/ProyectoSernacApp/templates/ProyectoSernacApp/login.html
+++ b/ProyectoSernacApp/templates/ProyectoSernacApp/login.html
@@ -21,7 +21,7 @@
       <p><label for="id_password"></label> <input type="password" name="password" autocomplete="current-password"
           required id="id_password" class="form-control" id="floatingInput" placeholder="Contraseña"></p>
           <div class="nav-item px-lg-4">
-            <a class="nav-link text-small text-center" type="submit" href="{% url 'reset_password' %}"><u><i>Haz olvidado tu contrasena?</u></i</a>
+            <a class="nav-link text-small text-center" type="submit" href="{% url 'reset_password' %}"><u><i>Haz olvidado tu contraseña?</u></i</a>
           </div>
           
       <button class="w-100 btn btn-lg btn-primary" type="submit" id="submit">Entrar</button>
