--- a/ProyectoSernacApp/templates/play/tablero.html
+++ b/ProyectoSernacApp/templates/play/tablero.html
@@ -34,6 +34,8 @@
            </tbody>
        </table>
 
+
+      <p>El tablero se va reiniciar mensualmente asi que no te preocupes tendras otra oportunidad de estar dentro de los mejores.</p>
       <a class="nav-link active mx-auto" href="{% url 'Educacion' %}">
           <img src="{% static 'ProyectoSernacApp/img/salida.png' %}" width="35" height="35">Volver al Inicio</a>
 
