--- a/ProyectoSernacApp/templates/ProyectoSernacApp/Educacion.html
+++ b/ProyectoSernacApp/templates/ProyectoSernacApp/Educacion.html
@@ -127,7 +127,7 @@
           <div class="carousel-caption text-start">
             <h1>{% block titulo %}Aprender tus derechos nunca habia sido tan facil.{% endblock titulo %}</h1>
             <p>lee atentamente y responde nuestro quiz para recibir grandes recompensas.</p>
-            <p><a class="btn btn-lg btn-primary" href = "{% url 'Jueguito' %}" >Jugar</a></p>
+            <p><a class="btn btn-lg btn-primary" href = "https://insidiousss69.itch.io/sernaceducativo" >Jugar</a></p>
           </div>
         </div>
       </div>
