--- a/ProyectoSernacApp/templates/ProyectoSernacApp/Educacion.html
+++ b/ProyectoSernacApp/templates/ProyectoSernacApp/Educacion.html
@@ -18,7 +18,7 @@
 
 
     <!-- Bootstrap core CSS -->
-<link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="{% static 'ProyectoSernacApp/css/bootstrap.min.css' %}" rel="stylesheet">
 
     <style>
       .bd-placeholder-img {
@@ -46,7 +46,7 @@
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'Educacion' %}">
-        <img src="{% static 'ProyectoSernacApp/img/perfil.png' %}" width="15" height="15">
+         <img src="{% static 'ProyectoSernacApp/img/perfil.png' %}" width="10" height="10">
         Bienvenido {{ user.username|title}}
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -113,15 +113,15 @@
 
 <main>
 
-  <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carousel2" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carousel3" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="mb-4" src="{% block imagen_principal %}{% static 'ProyectoSernacApp/img/juego.png' %}{% endblock imagen_principal %}" width="1825" height="512">
+<!--  <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">-->
+<!--    <div class="carousel-indicators">-->
+<!--      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>-->
+<!--      <button type="button" data-bs-target="#carousel2" data-bs-slide-to="1" aria-label="Slide 2"></button>-->
+<!--      <button type="button" data-bs-target="#carousel3" data-bs-slide-to="2" aria-label="Slide 3"></button>-->
+<!--    </div>-->
+<!--    <div class="carousel-inner">-->
+<!--      <div class="carousel-item active">-->
+<!--        <img class="mb-4" src="{% block imagen_principal %}{% static 'ProyectoSernacApp/img/juego.png' %}{% endblock imagen_principal %}" width="1825" height="512">-->
 
         <div class="container">
           <div class="carousel-caption text-start">
